gcc/testsuite/g++.dg/template/error8.C
// PR c++/11116

template <typename T> struct S {};

void f() {
  throw S (); // { dg-error "template" }
}
